--- a/style.css
+++ b/style.css
@@ -82,4 +82,14 @@
             text-align: center;
             list-style-position:inside;
         }
+        .but{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px
+        }
+        button{
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
 
